# backend/src/main/kotlin/de/lambda9/ready2race/backend/app/caterer/entity/CatererTransactionDTO.kt
@@ -1,27 +1,0 @@
-package de.lambda9.ready2race.backend.app.caterer.entity
-
-import java.math.BigDecimal
-import java.time.LocalDateTime
-import java.util.UUID
-
-data class CatererTransactionDTO(
-    val id: UUID,
-    val catererId: UUID,
-    val appUserId: UUID,
-    val price: BigDecimal,
-    val eventId: UUID,
-    val createdAt: LocalDateTime,
-    val updatedAt: LocalDateTime,
-    val createdBy: UUID
-)
-
-fun CatererTransaction.toDto(): CatererTransactionDTO = CatererTransactionDTO(
-    id = id,
-    catererId = catererId,
-    appUserId = appUserId,
-    price = price,
-    eventId = eventId,
-    createdAt = createdAt,
-    updatedAt = updatedAt,
-    createdBy = createdBy
-)
